--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Chenghao Wu</a><sup>1</sup>,</span>
+                <a href="https://theo-wu.github.io/" target="_blank">Chenghao Wu</a><sup>1</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Hamila Mailee</a><sup>2</sup>,</span>
+                  Hamila Mailee<sup>2</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Zahra Montazeri</a><sup>2</sup>,</span>
+                    <a href="https://research.manchester.ac.uk/en/persons/zahra.montazeri" target="_blank">Zahra Montazeri</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Tobias Ritschel</a><sup>1</sup>
+                      <a href="https://www.homepages.ucl.ac.uk/~ucactri/" target="_blank">Tobias Ritschel</a><sup>1</sup>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>University College London<br><sup>2</sup>The University of Manchester<br>EGSR (CGF Journal) 2024</span>
+                    <span class="author-block"><sup>1</sup>University College London &nbsp;<sup>2</sup>The University of Manchester<br><b>EGSR (CGF Journal) 2024</b></span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
@@ -107,7 +107,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2211.13333" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
