--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>University College London &nbsp;<sup>2</sup>The University of Manchester<br><b>EGSR (CGF Journal) 2024</b></span>
+                    <span class="author-block"><sup>1</sup>University College London &nbsp;<sup>2</sup>The University of Manchester<br><b style="font-size:1.2em; ">EGSR 2024 (Journal)</b></span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
