--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2211.13333" target="_blank"
+                  <a href="https://diglib.eg.org/items/b38de602-d27a-404a-b24d-b0f7c732cabe" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>EG</span>
                 </a>
               </span>
             </div>
