update arxiv link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>University College London &nbsp;<sup>2</sup>The University of Manchester<br><b style="font-size:1.2em; ">Computer Graphics Forum 2024 (EGSR)</b></span>
+                    <span class="author-block"><sup>1</sup>University College London &nbsp;<sup>2</sup>The University of Manchester<br><b style="font-size:1.2em; ">Computer Graphics Forum (EGSR 2024)</b></span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
@@ -74,7 +74,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://diglib.eg.org/bitstreams/1baa0903-2275-4355-8e86-35e8d63d46bd/download" target="_blank"
+                        <a href="https://diglib.eg.org/items/b38de602-d27a-404a-b24d-b0f7c732cabe" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -107,12 +107,12 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://diglib.eg.org/items/b38de602-d27a-404a-b24d-b0f7c732cabe" target="_blank"
+                  <a href="https://arxiv.org/abs/2211.13333" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>EG</span>
+                  <span>arXiv</span>
                 </a>
               </span>
             </div>
@@ -170,6 +170,13 @@
       <th style="text-align:center">Exponential(R)</th>
       <th style="text-align:center">Gamma(R,0.5)</th>
       </tr>
+      <tr>
+        <th style="text-align:center">Optimization &emsp;&emsp;&emsp;  Reference</th>
+        <th style="text-align:center">Optimization &emsp;&emsp;&emsp;  Reference</th>
+        <th style="text-align:center">Optimization &emsp;&emsp;&emsp;  Reference</th>
+        <th style="text-align:center">Optimization &emsp;&emsp;&emsp;  Reference</th>
+        <th style="text-align:center">Optimization &emsp;&emsp;&emsp;  Reference</th>
+        </tr>
       </thead>
       <tbody>
       <tr>
@@ -180,11 +187,11 @@
       <td style="text-align:center"><img src="static/gifs/shape2D/original/shape2D_0_EGSR_256_gamma_0.03.gif" alt="alt-text" height="256" width="300"></td>
       </tr>
       <tr>
-      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/EGSR2024/shape2D_0_EGSR2024_256_mlp_0.003.gif" alt="alt-text" height="256" width="300"></td>
-      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/EGSR2024/shape2D_0_EGSR2024_256_gaussian_0.003.gif" alt="alt-text" height="256" width="300"></td>
-      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/EGSR2024/shape2D_0_EGSR2024_256_logistic_0.003.gif" alt="alt-text" height="256" width="300"></td>
-      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/EGSR2024/shape2D_0_EGSR2024_256_exp_0.003.gif" alt="alt-text" height="256" width="300"></td>
-      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/EGSR2024/shape2D_0_EGSR2024_256_gamma_0.003.gif" alt="alt-text" height="256" width="300"></td>
+      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/shape2D_0_EGSR2024_256_mlp_0.003.gif" alt="alt-text" height="256" width="300"></td>
+      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/shape2D_0_EGSR2024_256_gaussian_0.003.gif" alt="alt-text" height="256" width="300"></td>
+      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/shape2D_0_EGSR2024_256_logistic_0.003.gif" alt="alt-text" height="256" width="300"></td>
+      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/shape2D_0_EGSR2024_256_exp_0.003.gif" alt="alt-text" height="256" width="300"></td>
+      <td style="text-align:center"><img src="static/gifs/shape2D/transfer/shape2D_0_EGSR2024_256_gamma_0.003.gif" alt="alt-text" height="256" width="300"></td>
       </tr>
       </tbody>
     </table>
@@ -225,6 +232,7 @@
     <h2 class="title is-5">3. Pose Optimization</h2>
     <table>
       <thead>
+        
       </thead>
       <tbody>
       <tr>
