--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
                   </a>
                 </span>
 
+                <!-- Youtube link -->
+                  <span class="link-block">
+                    <a href="https://www.youtube.com/watch?v=cxLnGoLy8xQ&ab_channel=EGSR2024" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-youtube"></i>
+                    </span>
+                    <span>Video</span>
+                  </a>
+                </span>
+
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
                   <a href="https://arxiv.org/abs/2211.13333" target="_blank"
